--- a/src/style.css
+++ b/src/style.css
@@ -639,6 +639,10 @@ video {
   height: auto;
 }
 
+.h-\[300px\] {
+  height: 300px;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -661,6 +665,14 @@ video {
 
 .w-1\/6 {
   width: 16.666667%;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-\[300px\] {
+  width: 300px;
 }
 
 .max-w-2xl {
@@ -693,6 +705,10 @@ video {
 
 .max-w-sm {
   max-width: 24rem;
+}
+
+.max-w-lg {
+  max-width: 32rem;
 }
 
 .-translate-y-1\/2 {
@@ -974,6 +990,11 @@ video {
   line-height: 1.75rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1153,8 +1174,16 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:h-\[400px\] {
+    height: 400px;
+  }
+
   .sm\:w-40 {
     width: 10rem;
+  }
+
+  .sm\:w-\[400px\] {
+    width: 400px;
   }
 
   .sm\:max-w-sm {
@@ -1189,6 +1218,16 @@ video {
   .sm\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .sm\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 }
 
@@ -1237,6 +1276,10 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:h-\[500px\] {
+    height: 500px;
+  }
+
   .lg\:w-1\/2 {
     width: 50%;
   }
@@ -1253,8 +1296,16 @@ video {
     width: 20rem;
   }
 
+  .lg\:w-\[500px\] {
+    width: 500px;
+  }
+
   .lg\:max-w-md {
     max-width: 28rem;
+  }
+
+  .lg\:max-w-sm {
+    max-width: 24rem;
   }
 
   .lg\:flex-row {
